--- a/style.css
+++ b/style.css
@@ -131,3 +131,43 @@ footer {
   padding: 24px 0;
   color: var(--off-white);
 }
+
+@media screen and (max-width: 500px) {
+  nav {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  nav > a:not(:first-of-type) {
+    margin-left: 0;
+    margin-top: 12px;
+  }
+
+  nav > a.logo {
+    margin-right: 0;
+    margin-bottom: 12px;
+    text-align: center;
+  }
+
+  main article {
+    padding: 24px 36px;
+  }
+
+  section.hero > .call-to-action {
+    font-size: 1.5rem;
+  }
+
+  main > article img {
+    float: none;
+    display: block;
+    margin: 0 auto 24px;
+  }
+
+  main > section, main > article {
+    margin-bottom: 24px;
+  }
+
+  main > section.hero {
+    margin-bottom: 24px;
+  }
+}
